Fix display issues on mobile

--- a/style.css
+++ b/style.css
@@ -115,6 +115,12 @@ button:hover{
         display: none;
     }
 
+    .logo{
+        margin-top: 5%;
+        margin-left: 10%;
+        margin-bottom: 5%;
+    }
+
     .mobileimage{
         display: flex;
         height: auto;
@@ -123,7 +129,11 @@ button:hover{
 
     .text{
         text-align:center;
-        max-width: 80%;
+        max-width: 90%;
+    }
+
+    .textcontainer{
+        margin-top: 20px;
     }
 
     h1{
